--- a/hotel_website/css/style.css
+++ b/hotel_website/css/style.css
@@ -98,6 +98,7 @@ p {
 
 .l-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 /* nav bar */
 #navbar {
@@ -110,7 +111,7 @@ p {
   color: white;
 }
 
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -224,7 +225,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url("../img/test-bg.jpg") no-repeat center center/cover;
   padding-top: 100px;
 }
