--- a/edgeledger_website/css/style.css
+++ b/edgeledger_website/css/style.css
@@ -20,6 +20,17 @@ p {
 }
 
 /* Utility classes */
+.text-center {
+  text-align: center;
+}
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 2rem;
+  overflow: hidden;
+}
+
 .text-primary {
   color: #93cb52;
 }
@@ -28,6 +39,48 @@ p {
   font-size: 4rem;
   margin-bottom: 0.75rem;
   line-height: 1.1;
+}
+
+.m-heading {
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
+}
+
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+.bg-dark {
+  background: #333;
+  color: #fff;
+}
+
+.bg-primary {
+  background: #93cb52;
+  color: #fff;
+}
+.py-1 {
+  padding: 1.5rem 0;
+}
+
+.py-2 {
+  padding: 2rem 0;
+}
+
+.py-3 {
+  padding: 3rem 0;
+}
+.p-1 {
+  padding: 1.5rem;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.p-3 {
+  padding: 3rem;
 }
 
 .lead {
@@ -52,6 +105,15 @@ p {
 .btn-dark {
   background: #333;
   color: #fff;
+}
+
+.list {
+  margin: 0.5rem 0;
+  list-style: none;
+}
+.list li {
+  padding: 0.5rem 0;
+  border-bottom: #444 dotted 1px;
 }
 
 /* Nav bar */
@@ -85,6 +147,7 @@ p {
 
 /* Showcase */
 #showcase {
+  position: relative;
   background: #333 url("../img/showcase.jpg") no-repeat center center/cover;
   height: 100vh;
   color: #fff;
@@ -100,7 +163,83 @@ p {
   padding: 0 2rem;
   /* overlay */
   position: absolute;
-  top: 60px;
+  top: 0px;
   left: 0;
+  right: 0;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Section: What We Do */
+#what .items {
+  display: flex;
+  padding: 1rem;
+}
+
+#what .item {
+  flex: 1;
+  text-align: center;
+  padding: 1rem;
+}
+
+#what .items .item i {
+  background: #93cb52;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 50%;
+}
+
+/* Section Who We Are  */
+#who {
+  display: flex;
+}
+
+#who div {
+  flex: 1;
+  flex-basis: 50%;
+}
+
+#who .who-img {
+  background: url("../img/people.jpg") center center/cover;
+}
+
+/* Clients */
+#clients .items {
+  display: flex;
+}
+
+#clients .items img {
+  display: block;
+  margin: auto;
+  width: 60%;
+}
+
+/* Section Contact us */
+#contact {
+  display: flex;
+}
+
+#contact .map,
+#contact .contact-form {
+  flex: 1;
+  flex-basis: 50%;
+}
+
+#contact .contact-form .form-group {
+  margin: 0.75rem;
+}
+
+#contact .contact-form label {
+  display: block;
+}
+
+#contact .contact-form input,
+#contact .contact-form textarea {
+  width: 100%;
+  padding: 0.5rem;
+}
+
+/* Footer */
+#main-footer p {
+  text-align: center;
 }
